# private-state-toolkit-for-solana

./: .env  .gitignore  .npmignore  Anchor.toml  Cargo.toml  DEMO_VIDEO_SCRIPT.md  README-.md  README.md  package-lock.json  package.json  tsconfig.json
programs/private_state_toolkit/: Cargo.toml
programs/private_state_toolkit/src/: lib.rs
programs/pst_consumer/: Cargo.toml
programs/pst_consumer/src/: lib.rs
scripts/: consumer_demo.ts  env.ts  fs_atomic.ts  inc.ts  init.ts  observer.ts  watch.ts
sdk/: index.d.ts  index.js  index.ts
tests/: private_state_toolkit.ts
