[package]
name = "pst_consumer"
version = "0.1.0"
description = "PST consumer demo program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
private_state_toolkit = { path = "../private_state_toolkit", features = ["cpi"] }
